Added product list button

--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -25,6 +25,8 @@
                 <a href="/Account/Users" class="btn btn-primary">View All Users</a>
             </div>
         }
+        <a href="@Url.Action("ProductList", "Inventory")" class="btn btn-primary">Product List</a>
+
     }
     else
     {
