--- a/GroupAssignment/Views/Account/Users.cshtml
+++ b/GroupAssignment/Views/Account/Users.cshtml
@@ -22,6 +22,9 @@
                 <td>@user.Username</td>
                 <td>@user.Email</td>
                 <td>@user.Role</td>
+                <td>
+                    <a href="@Url.Action("Edit", "Account", new { userId = user.Id })" class="btn btn-warning">Edit</a>
+                </td>
             </tr>
         }
     </tbody>
