--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -1,6 +1,34 @@
 ﻿<!-- Views/Inventory/Index.cshtml -->
 @model GroupAssignment.Models.UserModel
+<style>
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+    }
 
+    div {
+        text-align: center;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    p {
+        margin-bottom: 5px;
+    }
+
+    .role {
+        font-size: 14px; 
+    }
+
+    .btn {
+        margin-top: 10px; 
+    }
+</style>
 @{
     ViewData["Title"] = "Inventory Management";
 }
@@ -17,7 +45,7 @@
 
         <div>
             <p>Welcome, @username!</p>
-            <p>Role: @userRole</p>
+            <p>You are: @userRole</p>
         </div>
         @if (userRole == "Manager")
         {
