Created All Files

--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -54,6 +54,8 @@
             </div>
         }
         <a href="@Url.Action("ProductList", "Inventory")" class="btn btn-primary">Product List</a>
+        <a href="@Url.Action("Create", "Order")" class="btn btn-primary">View Orders</a>
+
 
     }
     else
