--- a/GroupAssignment/Views/Inventory/ProductList.cshtml
+++ b/GroupAssignment/Views/Inventory/ProductList.cshtml
@@ -3,7 +3,7 @@
 <h2>Product List</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <<a href="@Url.Action("Create", "Product")" class="btn btn-primary">Create Product</a>
 </p>
 
 <table class="table">
