--- a/GroupAssignment/Views/Order/Delete.cshtml
+++ b/GroupAssignment/Views/Order/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GroupAssignment.Data.Entities.OrderEntity
+﻿@model GroupAssignment.Models.OrderEntity
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,6 +11,12 @@
     <h4>OrderEntity</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MFRName)
         </dt>
