--- a/GroupAssignment/Views/Product/Index.cshtml
+++ b/GroupAssignment/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GroupAssignment.Data.Entities.ProductEntity>
+﻿@model IEnumerable<ProductEntity>
 
 @{
     ViewData["Title"] = "Index";
