--- a/GroupAssignment/Views/Order/Edit.cshtml
+++ b/GroupAssignment/Views/Order/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GroupAssignment.Data.Entities.OrderEntity
+﻿@model GroupAssignment.Models.OrderEntity
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,6 +13,11 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="UserName" class="control-label"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="MFRName" class="control-label"></label>
                 <input asp-for="MFRName" class="form-control" />
