--- a/GroupAssignment/Views/Order/Details.cshtml
+++ b/GroupAssignment/Views/Order/Details.cshtml
@@ -46,6 +46,38 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.OrderDeliveryDate)
         </dd>
+
+        <div>
+
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Products
+                </dt>
+                <dd class="col-sm-10">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Product Name</th>
+                                <th>Quantity</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var product in Model.Products)
+                            {
+                                <tr>
+                                    <td>@product.Id</td>
+                                    <td>@product.ProductName</td> 
+                                    <td>@product.ProductQuantity</td>
+                                    <td>@product.ProductDescription</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </dd>
+            </dl>
+        </div>
     </dl>
 </div>
 <div>
