Styled Order And Added Remove button on create

--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -54,7 +54,7 @@
             </div>
         }
         <a href="@Url.Action("ProductList", "Inventory")" class="btn btn-primary">Product List</a>
-        <a href="@Url.Action("Create", "Order")" class="btn btn-primary">View Orders</a>
+        <a href="@Url.Action("Index", "Order")" class="btn btn-primary">View Orders</a>
 
 
     }
@@ -63,5 +63,4 @@
         <p>User information not available.</p>
     }
 
-    <!-- Add your inventory management content here -->
 </div>
