--- a/GroupAssignment/Views/Order/Delete.cshtml
+++ b/GroupAssignment/Views/Order/Delete.cshtml
@@ -1,57 +1,69 @@
 ﻿@model GroupAssignment.Models.OrderEntity
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Order";
 }
 
-<h1>Delete</h1>
+<style>
+    .info-text {
+        color: #721c24; /* Dark red for emphasis */
+    }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>OrderEntity</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MFRName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MFRName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderStatus)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderStatus)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDeliveryDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDeliveryDate)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    .custom-header {
+        background-color: #f8d7da; /* Light red header background for warning */
+        color: #721c24; /* Dark red text color for contrast */
+    }
+
+    .custom-body {
+        background-color: #f8f9fa; /* Light gray body background, ensuring dark text is visible */
+    }
+
+    .btn-danger-custom {
+        background-color: #dc3545; /* Bootstrap red color for delete button */
+        color: white; /* White text for contrast */
+    }
+
+    .btn-custom-back {
+        background-color: #6c757d; /* Bootstrap gray color for back button */
+        color: white; /* White text for contrast */
+    }
+</style>
+
+<div class="container mt-4">
+    <h1 class="info-text">@ViewData["Title"]</h1>
+
+    <h3 class="text-danger">Are you sure you want to delete this?</h3>
+
+    <div class="card border-danger mb-4">
+        <div class="card-header custom-header">
+            <h4 class="mb-0">Order Details</h4>
+        </div>
+        <div class="card-body custom-body">
+            <dl class="row">
+                <dt class="col-sm-2">Username:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.UserName)</dd>
+
+                <dt class="col-sm-2">Manufacturer Name:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.MFRName)</dd>
+
+                <dt class="col-sm-2">Order Description:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.OrderDescription)</dd>
+
+                <dt class="col-sm-2">Order Status:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.OrderStatus)</dd>
+
+                <dt class="col-sm-2">Order Date:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.OrderDate)</dd>
+
+                <dt class="col-sm-2">Delivery Date:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.OrderDeliveryDate)</dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Delete" class="btn btn-danger-custom" />
+                <a asp-action="Index" class="btn btn-custom-back">Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
