Changed Product List File. Add Style to all Product classes

--- a/GroupAssignment/Views/Order/Index.cshtml
+++ b/GroupAssignment/Views/Order/Index.cshtml
@@ -41,7 +41,7 @@
 
     <p>
         <a asp-action="Create" class="btn btn-custom">Create New</a>
-        <a href="@Url.Action("ProductList", "Inventory")" class="btn btn-custom">View Products</a>
+        <a href="@Url.Action("Index", "Product")" class="btn btn-custom">View Products</a>
     </p>
 
     <table class="table table-custom table-striped">
