--- a/GroupAssignment/Views/Inventory/Index.cshtml
+++ b/GroupAssignment/Views/Inventory/Index.cshtml
@@ -53,7 +53,7 @@
                 <a href="/Account/Users" class="btn btn-primary">View All Users</a>
             </div>
         }
-        <a href="@Url.Action("ProductList", "Inventory")" class="btn btn-primary">Product List</a>
+        <a href="@Url.Action("Index", "Product")" class="btn btn-primary">Product List</a>
         <a href="@Url.Action("Index", "Order")" class="btn btn-primary">View Orders</a>
 
 
