--- a/GroupAssignment/Views/Order/Edit.cshtml
+++ b/GroupAssignment/Views/Order/Edit.cshtml
@@ -52,8 +52,43 @@
                 @Html.AntiForgeryToken()
                 <input type="hidden" asp-for="Id" />
 
-                <!-- Form Fields -->
-                <!-- UserName, MFRName, OrderDescription, OrderStatus, OrderDate, OrderDeliveryDate -->
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <div class="form-group">
+                    <label asp-for="UserName" class="control-label">User Name</label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="MFRName" class="control-label">Manufacturer Name</label>
+                    <input asp-for="MFRName" class="form-control" />
+                    <span asp-validation-for="MFRName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="OrderDescription" class="control-label">Order Description</label>
+                    <input asp-for="OrderDescription" class="form-control" />
+                    <span asp-validation-for="OrderDescription" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="OrderStatus" class="control-label">Order Status</label>
+                    <input asp-for="OrderStatus" class="form-control" />
+                    <span asp-validation-for="OrderStatus" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="OrderDate" class="control-label">Order Date</label>
+                    <input asp-for="OrderDate" class="form-control" />
+                    <span asp-validation-for="OrderDate" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="OrderDeliveryDate" class="control-label">Order Delivery Date</label>
+                    <input asp-for="OrderDeliveryDate" class="form-control" />
+                    <span asp-validation-for="OrderDeliveryDate" class="text-danger"></span>
+                </div>
 
                 <div class="form-group">
                     <h2>Product Details</h2>
@@ -87,16 +122,14 @@
                             }
                         </tbody>
                     </table>
-                    <button style=margin:5px type ="button" onclick="addRow()" class="btn btn-custom">Add Row</button>
-                </div>
-
-                <div class="form-group">
-                    <input style=margin:5px type ="submit" value="Save" class="btn btn-custom" />
+                    <button type="button" style=margin:1px onclick ="addRow()" class="btn btn-custom">Add Row</button>
                 </div>
             </form>
         </div>
     </div>
-
+                    <div class="form-group">
+                    <input type="submit" style=margin:5px value ="Save" class="btn btn-custom" />
+                </div
     <div class="mt-3">
         <a asp-action="Index" class="btn btn-custom-back">Back to List</a>
     </div>
